--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <parent>
     <groupId>com.opengamma</groupId>
     <artifactId>corporate-parent</artifactId>
     <version>2.8.1</version>
     <relativePath />
-  </parent>  
+  </parent>
   <groupId>com.opengamma.strata</groupId>
   <artifactId>strata-examples</artifactId>
   <version>2.12.56-SNAPSHOT</version>
@@ -63,11 +65,17 @@
       <groupId>com.opengamma.strata</groupId>
       <artifactId>strata-loader</artifactId>
     </dependency>
-    
+
     <!-- External dependencies -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.diffblue.cover</groupId>
+      <artifactId>cover-annotations</artifactId>
+      <version>1.3.0</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.beust</groupId>
@@ -83,6 +91,17 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-params</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>4.9.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -168,7 +187,9 @@
     <profile>
       <id>build-report-tool</id>
       <activation>
-        <property><name>dist</name></property>
+        <property>
+          <name>dist</name>
+        </property>
       </activation>
       <build>
         <plugins>
@@ -219,11 +240,14 @@
                 </filter>
               </filters>
               <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                <transformer
+                  implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                   <resource>META-INF/org/joda/convert/Renamed.ini</resource>
                 </transformer>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                <transformer
+                  implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                <transformer
+                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>com.opengamma.strata.examples.report.ReportRunnerTool</mainClass>
                 </transformer>
               </transformers>
